<resources>
    <string name="app_name">联泰配送中心</string>

    <string name="expand">全文</string>
    <string name="shink">收起</string>

    <string name="zone_img_position">circle_img_position</string>
    <string name="zone_publish_title">不吐不快</string>
    <string name="txt_dpaidan">待处理</string>
    <string name="txt_djieshou">待接收</string>
    <string name="txt_clz">处理中</string>
    <string name="txt_finish">已完成</string>
    <string name="left">还可以输入100个字符！</string>

    <string name="app_updater_download_later">暂不更新</string>
    <string name="app_updater_download_now">下载安装</string>
    <string name="app_updater_app_market">应用市场</string>
    <string name="app_updater_downloading">正在下载…</string>
    <string name="app_updater_download_failed">下载失败：%d</string>
    <string name="app_updater_dir_not_found">找不到下载目录 - %s</string>
    <string name="app_updater_install">安装</string>
    <string name="app_updater_retry">重试下载</string>
</resources>
