<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/am_ll_dpaidan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_red_selector"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/txt_dpaidan"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger_more"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/am_tv_paidan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="4dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_middle"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/am_ll_djieshou"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_cyan_selector"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/txt_djieshou"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger_more"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/am_tv_djs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="4dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_middle"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/am_ll_clz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_black_selector"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/txt_clz"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger_more"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/am_tv_clz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="4dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_middle"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/am_ll_finish"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_selector"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/txt_finish"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger_more"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/am_tv_ywc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_margin="4dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_middle"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>